--- a/ShivanisBachelorette/ShivanisBachelorette/Base.lproj/Main.storyboard
+++ b/ShivanisBachelorette/ShivanisBachelorette/Base.lproj/Main.storyboard
@@ -69,49 +69,74 @@
             <point key="canvasLocation" x="1117" y="429"/>
         </scene>
         <!--Step View Controller-->
-        <scene sceneID="quS-3H-oc5">
+        <scene sceneID="X3L-Zo-SZk">
             <objects>
-                <viewController storyboardIdentifier="StepViewController" id="cuM-OO-chK" customClass="StepViewController" customModule="ShivanisBachelorette" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StepViewController" id="9J3-0F-Fe7" customClass="StepViewController" customModule="ShivanisBachelorette" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="bMa-ng-yM9"/>
-                        <viewControllerLayoutGuide type="bottom" id="7pM-MI-cv4"/>
+                        <viewControllerLayoutGuide type="top" id="Mgf-Vt-Nbr"/>
+                        <viewControllerLayoutGuide type="bottom" id="3kY-cz-cly"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Uqj-ho-LSj">
+                    <view key="view" contentMode="scaleToFill" id="MPp-vd-q6t">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YYu-yF-pcw">
-                                <rect key="frame" x="20" y="94" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pn5-My-z5B">
+                                <rect key="frame" x="277" y="470" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
-                                <connections>
-                                    <segue destination="tsS-XR-fMK" kind="show" id="4Mw-YQ-rkB"/>
-                                </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pfl-zp-gnU">
+                                <rect key="frame" x="50" y="200" width="500" height="200"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zwx-MW-Q4F">
+                                        <rect key="frame" x="70" y="36" width="401" height="128"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" placeholder="YES" id="fmu-tr-mv7"/>
+                                        </constraints>
+                                        <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqU-yz-Trg">
+                                        <rect key="frame" x="8" y="36" width="42" height="106"/>
+                                        <color key="backgroundColor" red="1" green="0.82604344841053079" blue="0.35556907155900463" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="42" id="IKo-3n-5yc"/>
+                                            <constraint firstAttribute="height" constant="106" id="Vxg-B3-bS8"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.76728465970000004" green="0.98355693720000004" blue="0.34401460350000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="iqU-yz-Trg" firstAttribute="top" secondItem="zwx-MW-Q4F" secondAttribute="top" id="7mm-5k-VdA"/>
+                                    <constraint firstAttribute="trailing" secondItem="zwx-MW-Q4F" secondAttribute="trailing" constant="29" id="8oB-kK-Xgx"/>
+                                    <constraint firstItem="iqU-yz-Trg" firstAttribute="leading" secondItem="pfl-zp-gnU" secondAttribute="leading" constant="8" id="CLH-TK-e1b"/>
+                                    <constraint firstItem="zwx-MW-Q4F" firstAttribute="top" secondItem="pfl-zp-gnU" secondAttribute="top" constant="36" id="F92-cx-jyy"/>
+                                    <constraint firstItem="zwx-MW-Q4F" firstAttribute="leading" secondItem="iqU-yz-Trg" secondAttribute="trailing" constant="20" id="Qof-3o-HCy"/>
+                                    <constraint firstAttribute="bottom" secondItem="zwx-MW-Q4F" secondAttribute="bottom" constant="36" id="h4i-WN-3pI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="3kY-cz-cly" firstAttribute="top" secondItem="pn5-My-z5B" secondAttribute="bottom" constant="100" id="4nO-yu-VUJ"/>
+                            <constraint firstItem="pfl-zp-gnU" firstAttribute="centerY" secondItem="MPp-vd-q6t" secondAttribute="centerY" id="79c-k7-TKu"/>
+                            <constraint firstItem="pfl-zp-gnU" firstAttribute="centerX" secondItem="MPp-vd-q6t" secondAttribute="centerX" id="7vh-3U-2ZX"/>
+                            <constraint firstItem="pn5-My-z5B" firstAttribute="centerX" secondItem="MPp-vd-q6t" secondAttribute="centerX" id="Zb2-jU-Ud4"/>
+                            <constraint firstItem="pfl-zp-gnU" firstAttribute="leading" secondItem="MPp-vd-q6t" secondAttribute="leadingMargin" constant="30" id="w6S-Ti-TvZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pfl-zp-gnU" secondAttribute="trailing" constant="30" id="xuM-rN-jJm"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="stepNumberLabel" destination="iqU-yz-Trg" id="m8W-Ut-smK"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gGE-AV-stU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yTi-5Z-ZyK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1761" y="429"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="sWl-hd-V9F">
-            <objects>
-                <viewController id="tsS-XR-fMK" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="vGS-VV-PgA"/>
-                        <viewControllerLayoutGuide type="bottom" id="v52-BD-Z5I"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="cGr-GL-XsU">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="UaG-lp-fV3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2393" y="429"/>
+            <point key="canvasLocation" x="1754" y="429"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="NdC-rD-ONa">
