--- a/ShivanisBachelorette/ShivanisBachelorette/Base.lproj/Main.storyboard
+++ b/ShivanisBachelorette/ShivanisBachelorette/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kok-pX-Vu3">
                                 <rect key="frame" x="20" y="238" width="560" height="124"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1897941_832545683428330_1179236264_n.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="pJm-JF-vul">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcomePhoto.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="pJm-JF-vul">
                                         <rect key="frame" x="245" y="8" width="71" height="60"/>
                                         <color key="backgroundColor" red="0.18083342190000001" green="0.98355693720000004" blue="0.95269863450000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -36,7 +36,6 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="pJm-JF-vul" firstAttribute="top" secondItem="Kok-pX-Vu3" secondAttribute="top" constant="8" id="39g-m6-pSV"/>
                                     <constraint firstItem="VSA-8E-a7J" firstAttribute="centerX" secondItem="pJm-JF-vul" secondAttribute="centerX" id="FWe-wz-DSi"/>
@@ -45,24 +44,33 @@
                                     <constraint firstItem="VSA-8E-a7J" firstAttribute="top" secondItem="pJm-JF-vul" secondAttribute="bottom" constant="8" id="qb4-io-m0k"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AaD-UD-sPZ" customClass="StepV">
-                                <rect key="frame" x="283" y="470" width="34" height="30"/>
-                                <state key="normal" title="Start"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TKQ-p6-GC4">
+                                <rect key="frame" x="225" y="470" width="150" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.16775150183016974" blue="0.17400512685872138" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="Tgc-tc-EHH"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
-                                    <action selector="startPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="N3e-Ra-1v8"/>
+                                    <action selector="startPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XTJ-BA-HuM"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="AaD-UD-sPZ" secondAttribute="bottom" constant="100" id="BtJ-Gg-fbm"/>
+                            <constraint firstItem="TKQ-p6-GC4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AHt-ud-0SE"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TKQ-p6-GC4" secondAttribute="bottom" constant="100" id="Ked-cK-bjf"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Kok-pX-Vu3" secondAttribute="trailing" id="MgA-t8-fuq"/>
-                            <constraint firstItem="AaD-UD-sPZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jQw-Iq-nMH"/>
                             <constraint firstItem="Kok-pX-Vu3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="sir-Jk-6n1"/>
                             <constraint firstItem="Kok-pX-Vu3" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zVC-Ot-AwT"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="L54-rE-WEm"/>
+                    <connections>
+                        <outlet property="startButton" destination="TKQ-p6-GC4" id="NZm-IP-6ex"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -82,56 +90,60 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pn5-My-z5B">
                                 <rect key="frame" x="277" y="470" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="9J3-0F-Fe7" eventType="touchUpInside" id="0Ud-Ee-Hqq"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pfl-zp-gnU">
-                                <rect key="frame" x="50" y="200" width="500" height="200"/>
+                                <rect key="frame" x="35" y="200" width="530" height="200"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zwx-MW-Q4F">
-                                        <rect key="frame" x="70" y="36" width="401" height="128"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <rect key="frame" x="70" y="36" width="445" height="128"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="128" placeholder="YES" id="fmu-tr-mv7"/>
                                         </constraints>
                                         <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqU-yz-Trg">
-                                        <rect key="frame" x="8" y="36" width="42" height="106"/>
-                                        <color key="backgroundColor" red="1" green="0.82604344841053079" blue="0.35556907155900463" alpha="1" colorSpace="calibratedRGB"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqU-yz-Trg">
+                                        <rect key="frame" x="10" y="36" width="42" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="42" id="IKo-3n-5yc"/>
-                                            <constraint firstAttribute="height" constant="106" id="Vxg-B3-bS8"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.76728465970000004" green="0.98355693720000004" blue="0.34401460350000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="iqU-yz-Trg" firstAttribute="top" secondItem="zwx-MW-Q4F" secondAttribute="top" id="7mm-5k-VdA"/>
-                                    <constraint firstAttribute="trailing" secondItem="zwx-MW-Q4F" secondAttribute="trailing" constant="29" id="8oB-kK-Xgx"/>
-                                    <constraint firstItem="iqU-yz-Trg" firstAttribute="leading" secondItem="pfl-zp-gnU" secondAttribute="leading" constant="8" id="CLH-TK-e1b"/>
+                                    <constraint firstAttribute="trailing" secondItem="zwx-MW-Q4F" secondAttribute="trailing" constant="15" id="8oB-kK-Xgx"/>
+                                    <constraint firstItem="iqU-yz-Trg" firstAttribute="leading" secondItem="pfl-zp-gnU" secondAttribute="leading" constant="10" id="CLH-TK-e1b"/>
                                     <constraint firstItem="zwx-MW-Q4F" firstAttribute="top" secondItem="pfl-zp-gnU" secondAttribute="top" constant="36" id="F92-cx-jyy"/>
-                                    <constraint firstItem="zwx-MW-Q4F" firstAttribute="leading" secondItem="iqU-yz-Trg" secondAttribute="trailing" constant="20" id="Qof-3o-HCy"/>
+                                    <constraint firstItem="zwx-MW-Q4F" firstAttribute="leading" secondItem="iqU-yz-Trg" secondAttribute="trailing" constant="18" id="Qof-3o-HCy"/>
                                     <constraint firstAttribute="bottom" secondItem="zwx-MW-Q4F" secondAttribute="bottom" constant="36" id="h4i-WN-3pI"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="0.38080643346393228" blue="0.36175126328911822" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="3kY-cz-cly" firstAttribute="top" secondItem="pn5-My-z5B" secondAttribute="bottom" constant="100" id="4nO-yu-VUJ"/>
                             <constraint firstItem="pfl-zp-gnU" firstAttribute="centerY" secondItem="MPp-vd-q6t" secondAttribute="centerY" id="79c-k7-TKu"/>
                             <constraint firstItem="pfl-zp-gnU" firstAttribute="centerX" secondItem="MPp-vd-q6t" secondAttribute="centerX" id="7vh-3U-2ZX"/>
                             <constraint firstItem="pn5-My-z5B" firstAttribute="centerX" secondItem="MPp-vd-q6t" secondAttribute="centerX" id="Zb2-jU-Ud4"/>
-                            <constraint firstItem="pfl-zp-gnU" firstAttribute="leading" secondItem="MPp-vd-q6t" secondAttribute="leadingMargin" constant="30" id="w6S-Ti-TvZ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="pfl-zp-gnU" secondAttribute="trailing" constant="30" id="xuM-rN-jJm"/>
+                            <constraint firstItem="pfl-zp-gnU" firstAttribute="leading" secondItem="MPp-vd-q6t" secondAttribute="leadingMargin" constant="15" id="w6S-Ti-TvZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pfl-zp-gnU" secondAttribute="trailing" constant="15" id="xuM-rN-jJm"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="nextButton" destination="pn5-My-z5B" id="46x-cv-BqI"/>
                         <outlet property="stepNumberLabel" destination="iqU-yz-Trg" id="m8W-Ut-smK"/>
+                        <outlet property="stepTextView" destination="zwx-MW-Q4F" id="1sX-jX-BEA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yTi-5Z-ZyK" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -158,6 +170,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="1897941_832545683428330_1179236264_n.jpg" width="640" height="425"/>
+        <image name="welcomePhoto.jpg" width="640" height="425"/>
     </resources>
 </document>
