--- a/ShivanisBachelorette/ShivanisBachelorette/Base.lproj/Main.storyboard
+++ b/ShivanisBachelorette/ShivanisBachelorette/Base.lproj/Main.storyboard
@@ -77,6 +77,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="L54-rE-WEm"/>
                     <connections>
+                        <outlet property="appNameTextView" destination="VSA-8E-a7J" id="IHl-9I-PUo"/>
                         <outlet property="bottomTextView" destination="zbw-jx-9O8" id="rrL-uh-IHW"/>
                         <outlet property="startButton" destination="TKQ-p6-GC4" id="NZm-IP-6ex"/>
                     </connections>
